--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "morning-essentials",
+  "name": "MorningEssentials",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Mohit Karangiya <mohitkarangiya@gmail.com>",
